# PyOCN

./: .gitattributes  .gitignore  .readthedocs.yaml  CHANGELOG.md  MANIFEST.in  TODO  demo.ipynb  demo.py  prof  pyproject.toml  readme.html  readme.md  sandbox.py  setup.py  styleguide.md
.github/workflows/: docs.yml  tests.yml
PyOCN/: StreamGraph.py  _StreamGraphC.py  _StreamGraphException.py  __init__.py  _flowgrid_convert.py  _libocn_bindings.py  _statushandler.py  _streamgraph_convert.py  _version.py  ocn.py  plotting.py  pyproject.toml  utils.py
PyOCN/c_src/: build.sh  flowgrid.c  flowgrid.h  ocn.c  ocn.h  pymodule_shim.c  rng.c  rng.h  status.c  status.h  streamgraph.c  streamgraph.h  test  test.c  timeit.c
docs/: conf.py  current_packages.txt  index.rst  ocn_class.rst  plotting.rst  requirements.txt  utilities.rst
docs/_build/html/: .buildinfo  .buildinfo.bak  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/.doctrees/: environment.pickle  index.doctree
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/PyOCN/: ocn.html  plotting.html  utils.html
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/_static/: documentation_options.js
src/: adjacencymatrix.c  adjacencymatrix.h  array.c  array.h  arraymath.c  arraymath.h  boolarray.c  build.c  idx.c  main  main.c  neighbormatrix.c  network.c  ocn.c  program  returncodes.h  spanningtree.h  streamgraph.c  streamgraph.h  streamgraph_2x2.c  test  test.c
tests/: dependencies.py  get_deptestresults.py  test_basic.py
(+7 files in other folders)
