[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PyOCN"
version = "0.0.20251001"
description = "Optimal Channel Networks (OCN) in Python with a C core"
readme = "readme.md"
requires-python = ">=3.10"
license = { text = "GPL3" }
authors = [{ name = "Alexander S. Fox" }]
dependencies = [
  "numpy>=1.24",  # should check the actual min
  "networkx>=3.1",  # should check the actual min
  "tqdm>=4.44",  # should check the actual min
  "matplotlib>=3.5",  # should check the actual min
]

[project.urls]
Homepage = "https://github.com/alextsfox/PyOCN"
raster = [
  "rasterio>=1.3",
  "xarray>=2024",  
]

[tool.setuptools.packages.find]
include = ["PyOCN*"]